--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <h1 class="text-xl font-bold text-slate-800">Mustafa Mohamed</h1>
             <div class="hidden md:flex space-x-8">
                 <a href="#profile" class="nav-link text-slate-600 hover:text-indigo-600 transition-colors duration-300">Profile</a>
+                <a href="#certificates" class="nav-link text-slate-600 hover:text-indigo-600 transition-colors duration-300">Certificates</a>
                 <a href="#experience" class="nav-link text-slate-600 hover:text-indigo-600 transition-colors duration-300">Experience</a>
                 <a href="#skills" class="nav-link text-slate-600 hover:text-indigo-600 transition-colors duration-300">Skills</a>
                 <a href="#achievements" class="nav-link text-slate-600 hover:text-indigo-600 transition-colors duration-300">Achievements</a>
@@ -82,6 +83,7 @@
         </nav>
         <div id="mobile-menu" class="hidden md:hidden px-6 pb-4 space-y-2">
              <a href="#profile" class="block nav-link text-slate-600 hover:text-indigo-600 transition-colors duration-300">Profile</a>
+            <a href="#certificates" class="block nav-link text-slate-600 hover:text-indigo-600 transition-colors duration-300">Certificates</a>
             <a href="#experience" class="block nav-link text-slate-600 hover:text-indigo-600 transition-colors duration-300">Experience</a>
             <a href="#skills" class="block nav-link text-slate-600 hover:text-indigo-600 transition-colors duration-300">Skills</a>
             <a href="#achievements" class="block nav-link text-slate-600 hover:text-indigo-600 transition-colors duration-300">Achievements</a>
@@ -111,6 +113,57 @@
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <div class="text-4xl font-bold text-indigo-600">100+</div>
                     <p class="mt-2 text-slate-500">High-Risk Vulnerabilities Found</p>
+                </div>
+            </div>
+        </section>
+        
+        <section id="certificates" class="mb-16 scroll-mt-24">
+            <h3 class="text-3xl font-bold text-center mb-12 text-slate-900">Certificates</h3>
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+                <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
+                    <img src="https://placehold.co/100x100/A5B4FC/4338CA?text=OSCP" alt="Offensive Security Certified Professional Badge" class="w-24 h-24 mb-4 rounded-full">
+                    <h4 class="text-lg font-semibold mb-1">Offensive Security Certified Professional (OSCP)</h4>
+                    <p class="text-sm text-slate-500">Offensive Security</p>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
+                    <img src="https://placehold.co/100x100/A5B4FC/4338CA?text=eCTHPv2" alt="Certified Threat Hunting Professional Badge" class="w-24 h-24 mb-4 rounded-full">
+                    <h4 class="text-lg font-semibold mb-1">Certified Threat Hunting Professional (eCTHPv2)</h4>
+                    <p class="text-sm text-slate-500">eLearnSecurity</p>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
+                    <img src="https://placehold.co/100x100/A5B4FC/4338CA?text=Kaspersky" alt="Kaspersky Certified Professional Badge" class="w-24 h-24 mb-4 rounded-full">
+                    <h4 class="text-lg font-semibold mb-1">Kaspersky Certified Professional: Endpoint Security and Management What's New</h4>
+                    <p class="text-sm text-slate-500">Kaspersky</p>
+                </div>
+                 <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
+                    <img src="https://placehold.co/100x100/A5B4FC/4338CA?text=Kaspersky" alt="Kaspersky Certified System Engineer Badge" class="w-24 h-24 mb-4 rounded-full">
+                    <h4 class="text-lg font-semibold mb-1">Kaspersky Certified System Engineer: Kaspersky Security Center System Management</h4>
+                    <p class="text-sm text-slate-500">Kaspersky</p>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
+                    <img src="https://placehold.co/100x100/A5B4FC/4338CA?text=Kaspersky" alt="Kaspersky Certified Professional Badge" class="w-24 h-24 mb-4 rounded-full">
+                    <h4 class="text-lg font-semibold mb-1">Kaspersky Certified Professional: Endpoint Security and Management</h4>
+                    <p class="text-sm text-slate-500">Kaspersky</p>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
+                    <img src="https://placehold.co/100x100/A5B4FC/4338CA?text=Kaspersky" alt="Kaspersky Threat Intelligence Badge" class="w-24 h-24 mb-4 rounded-full">
+                    <h4 class="text-lg font-semibold mb-1">Kaspersky Certified Professional: Kaspersky Threat Intelligence</h4>
+                    <p class="text-sm text-slate-500">Kaspersky</p>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
+                    <img src="https://placehold.co/100x100/A5B4FC/4338CA?text=THM" alt="TryHackme Advent of Cyber 3 Badge" class="w-24 h-24 mb-4 rounded-full">
+                    <h4 class="text-lg font-semibold mb-1">TryHackme Advent of Cyber 3</h4>
+                    <p class="text-sm text-slate-500">TryHackme</p>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
+                    <img src="https://placehold.co/100x100/A5B4FC/4338CA?text=ANSSI" alt="ANSSI Mooc Security Engineer Badge" class="w-24 h-24 mb-4 rounded-full">
+                    <h4 class="text-lg font-semibold mb-1">ANSSI Mooc Security Engineer</h4>
+                    <p class="text-sm text-slate-500">ANSSI</p>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
+                    <img src="https://placehold.co/100x100/A5B4FC/4338CA?text=Tenable" alt="Tenable.sc Certificate of Proficiency Badge" class="w-24 h-24 mb-4 rounded-full">
+                    <h4 class="text-lg font-semibold mb-1">Tenable.sc Certificate of Proficiency</h4>
+                    <p class="text-sm text-slate-500">Tenable</p>
                 </div>
             </div>
         </section>
