--- a/index.html
+++ b/index.html
@@ -121,37 +121,37 @@
             <h3 class="text-3xl font-bold text-center mb-12 text-slate-900">Certificates</h3>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
                 <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
-                    <img src="https://placehold.co/100x100/A5B4FC/4338CA?text=OSCP" alt="Offensive Security Certified Professional Badge" class="w-24 h-24 mb-4 rounded-full">
+                    <img src="https://raw.githubusercontent.com/d3sca/d3sca.github.io/refs/heads/main/oscp_badge.jpg" alt="Offensive Security Certified Professional Badge" class="w-24 h-24 mb-4 rounded-full">
                     <h4 class="text-lg font-semibold mb-1">Offensive Security Certified Professional (OSCP)</h4>
                     <p class="text-sm text-slate-500">Offensive Security</p>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
-                    <img src="https://placehold.co/100x100/A5B4FC/4338CA?text=eCTHPv2" alt="Certified Threat Hunting Professional Badge" class="w-24 h-24 mb-4 rounded-full">
+                    <img src="https://raw.githubusercontent.com/d3sca/d3sca.github.io/refs/heads/main/a3c21f51-e32e-48cc-9892-21c6c9614520.png" alt="Certified Threat Hunting Professional Badge" class="w-24 h-24 mb-4 rounded-full">
                     <h4 class="text-lg font-semibold mb-1">Certified Threat Hunting Professional (eCTHPv2)</h4>
                     <p class="text-sm text-slate-500">eLearnSecurity</p>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
-                    <img src="https://placehold.co/100x100/A5B4FC/4338CA?text=Kaspersky" alt="Kaspersky Certified Professional Badge" class="w-24 h-24 mb-4 rounded-full">
+                    <img src="https://raw.githubusercontent.com/d3sca/d3sca.github.io/refs/heads/main/logo.png" alt="Kaspersky Certified Professional Badge" class="w-24 h-24 mb-4 rounded-full">
                     <h4 class="text-lg font-semibold mb-1">Kaspersky Certified Professional: Endpoint Security and Management What's New</h4>
                     <p class="text-sm text-slate-500">Kaspersky</p>
                 </div>
                  <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
-                    <img src="https://placehold.co/100x100/A5B4FC/4338CA?text=Kaspersky" alt="Kaspersky Certified System Engineer Badge" class="w-24 h-24 mb-4 rounded-full">
+                    <img src="https://raw.githubusercontent.com/d3sca/d3sca.github.io/refs/heads/main/logo.png" alt="Kaspersky Certified System Engineer Badge" class="w-24 h-24 mb-4 rounded-full">
                     <h4 class="text-lg font-semibold mb-1">Kaspersky Certified System Engineer: Kaspersky Security Center System Management</h4>
                     <p class="text-sm text-slate-500">Kaspersky</p>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
-                    <img src="https://placehold.co/100x100/A5B4FC/4338CA?text=Kaspersky" alt="Kaspersky Certified Professional Badge" class="w-24 h-24 mb-4 rounded-full">
+                    <img src="https://raw.githubusercontent.com/d3sca/d3sca.github.io/refs/heads/main/logo.png" alt="Kaspersky Certified Professional Badge" class="w-24 h-24 mb-4 rounded-full">
                     <h4 class="text-lg font-semibold mb-1">Kaspersky Certified Professional: Endpoint Security and Management</h4>
                     <p class="text-sm text-slate-500">Kaspersky</p>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
-                    <img src="https://placehold.co/100x100/A5B4FC/4338CA?text=Kaspersky" alt="Kaspersky Threat Intelligence Badge" class="w-24 h-24 mb-4 rounded-full">
+                    <img src="https://raw.githubusercontent.com/d3sca/d3sca.github.io/refs/heads/main/logo.png" alt="Kaspersky Threat Intelligence Badge" class="w-24 h-24 mb-4 rounded-full">
                     <h4 class="text-lg font-semibold mb-1">Kaspersky Certified Professional: Kaspersky Threat Intelligence</h4>
                     <p class="text-sm text-slate-500">Kaspersky</p>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
-                    <img src="https://placehold.co/100x100/A5B4FC/4338CA?text=THM" alt="TryHackme Advent of Cyber 3 Badge" class="w-24 h-24 mb-4 rounded-full">
+                    <img src="https://raw.githubusercontent.com/d3sca/d3sca.github.io/refs/heads/main/thm.png" alt="TryHackme Advent of Cyber 3 Badge" class="w-24 h-24 mb-4 rounded-full">
                     <h4 class="text-lg font-semibold mb-1">TryHackme Advent of Cyber 3</h4>
                     <p class="text-sm text-slate-500">TryHackme</p>
                 </div>
@@ -161,7 +161,7 @@
                     <p class="text-sm text-slate-500">ANSSI</p>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
-                    <img src="https://placehold.co/100x100/A5B4FC/4338CA?text=Tenable" alt="Tenable.sc Certificate of Proficiency Badge" class="w-24 h-24 mb-4 rounded-full">
+                    <img src="https://raw.githubusercontent.com/d3sca/d3sca.github.io/refs/heads/main/100.jpeg" alt="Tenable.sc Certificate of Proficiency Badge" class="w-24 h-24 mb-4 rounded-full">
                     <h4 class="text-lg font-semibold mb-1">Tenable.sc Certificate of Proficiency</h4>
                     <p class="text-sm text-slate-500">Tenable</p>
                 </div>
